test/prism_regression/invalid/case_match_missing_predicate.rb
# typed: true
# disable-parser-comparison: true

case
in x
end
